--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,73 +3,51 @@
 Css
 
 */
-
-html{
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+ul {
+  list-style-type: none;
 }
-
-div{
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;	
-}
+	
 
 body{
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;	
-	line-height:1; /*similar to that double space*/
+	background:#f9f3f8;
+	font-family: 'Raleway', sans-serif;
+	font-size: 16pt;
+	font-weight: 400;
+	line-height: 1.75em;
+	}
 }
-
-h1, h2, h3, p{
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;	
-}
-
-ul,li{
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;	
-	list-style:none;
-}
-
 section{
 	display:block;
+	text-align:center;
 }
 
 /* headers */
+#main{
+	margin-left: 35%;
+	padding: 2em 2em 2em 2em;
+	width: calc(100% - 35%);
+	box-sizing: border-box;
+}
+#main > section {
+	border-top: solid 1px #715464;
+	margin: 0em 0 0 0;
+	padding: 3em 0 0em 0;
+}
+
 
 #header{
 	display: flex;
 	flex-direction:column;
 	align-items: flex-end;
 	background-color: #d7c6cf;
-	background-attachment: scroll, fixed;
-	background-image: url("../../images/hotair.png"), url("../../images/052666ba935e3117b8b70cfbcb42b507.jpg");
-	background-position:-35px 200px, -100px 0px;
+	background-attachment: scroll;
+	background-image: url("../../images/tumblr_static_efv3bwozab4s4s88c8g0okk84.png");
+	background-position: left top;
 	background-repeat: no-repeat;
-	background-size: 100%, 40%;
+	background-size: auto 30%;
 	height: 100%;
 	left:0;
-	padding: 8em 3em;
+	padding: 8em 1em;
 	position: fixed;
 	text-align: right;
 	top: 0;
@@ -78,23 +56,85 @@ section{
 
 #header h1{
 	font-size: 1.35em;
-	padding-top: 20px;
+	padding-top: 5px;
+	padding-right: 25px;
 	line-height: 1.75em;
 	font-family: 'Raleway', sans-serif;
 	color: #715464;
 }
 
-/* Box Model */
+.contact{
+	left:0;
+	top:0;
+	margin-left: 0px;
+	display:block;
+	
+}
 
-	*, *:before, *:after {
-		-moz-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		box-sizing: border-box;
-	}
+.contact li{
+
+	display: inline-flex;
+	margin: 0 20px 0 0;
+	flex-direction:column;
+	justify-content: space-between;
+}
+
 
 .img-circle{
-	
+	padding-right: 25px;
 	border-radius: 50%;
-	width: 200px;
+	width: 220px;
 	height: auto;
+	
 }
+
+
+	article.blog{
+		background: url("../../images/iPhone-Flower-Photography-43.jpg");
+		background-size: 100%;
+		background-repeat: no-repeat;
+		height: 400px;
+		width: 100%;
+		margin: 1em;
+		
+	}
+	
+	a {
+		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+		border-bottom: dotted 1px;
+		color: #715464;
+		text-decoration: none;
+
+	}
+
+		a:hover {
+			border-bottom-color: transparent;
+			text-decoration: none;
+		}
+
+	p {
+		margin: 0 0 2em 0;
+	}
+
+	h1, h2, h3{
+		color: #715464;
+		font-weight: 400;
+		line-height: 1em;
+		margin: 0 0 1em 0;
+	}
+
+	
+	.row {
+		border-bottom: solid 1px black;
+
+	}
+
+
+
+	header p {
+		color: #b2b2b2;
+		position: relative;
+		margin: 0 0 1.5em 0;
+	}
+
+	
