--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@
 Css
 
 */
+
 ul {
   list-style-type: none;
 }
@@ -18,15 +19,42 @@ body{
 	font-size: 16pt;
 	font-weight: 400;
 	line-height: 1.75em;
-	}
+    margin: 0px; 
+	padding: 0px;
 }
+.navbar-brand{
+	position: relative;
+	margin-bottom: 0px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+}
+.navbar-inner {
+    min-height: 0px;
+
+}
+
+.navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+	font-size: 15px;
+	height: 30px;
+	padding-left:350px;
+	margin: 0;
+
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+
+}
+
 section{
 	display:block;
 	text-align:center;
 }
 
 #main{
-	margin-left: 35%;
+	margin-left: 30%;
 	padding: 2em 2em 2em 2em;
 	width: calc(100% - 35%);
 	box-sizing: border-box;
@@ -36,7 +64,6 @@ section{
 	margin: 0em 0 0 0;
 	padding: 3em 0 0em 0;
 }
-
 
 #header{
 	display: flex;
@@ -52,19 +79,11 @@ section{
 	left:0;
 	padding: 8em 1em;
 	position: fixed;
-	text-align: right;
+	text-align: center;
 	top: 0;
-	width: 30%;
+	width: 25%;
 }
 
-#header h1{
-	font-size: 1.35em;
-	padding-top: 5px;
-	padding-right: 25px;
-	line-height: 1.75em;
-	font-family: 'Raleway', sans-serif;
-	color: #715464;
-}
 
 .contact{
 	margin-right: 0px;
@@ -96,10 +115,8 @@ section{
 }
 
 article img{
-		max-height: 400px;
-		max-width:650px;
-		height:auto;
-		width: auto;
+		max-height: auto;
+		max-width:100%;
 		padding-top: 0px;
 		margin: 0px;
 		margin-bottom: 50px;
@@ -109,10 +126,8 @@ article img{
 
 	}
 article img.badminton{
-		max-height: 500px;
-		max-width:650px;
-		height:auto;
-		width: auto;
+		max-height: auto;
+		max-width:100%;
 		padding-top: 0px;
 		margin: 0px;
 		margin-bottom: 50px;
@@ -136,7 +151,7 @@ article img.badminton:hover {
 		margin: 0 0 2em 0;
 	}
 
-	h1, h2, h3{
+	h2, h3{
 		color: #715464;
 		font-weight: 400;
 		line-height: 1em;
@@ -150,8 +165,109 @@ article img.badminton:hover {
 	}
 
 header h2{
-	font-size: 50px;
-	color:#715464;
+	font-size: 40px;
+	font-family: 'Raleway', sans-serif;
+	color: #715464;
 }
 
+
+@media screen and (max-width: 980px) {
+
+	h1 br, h2 br, h3 br {
+		display: none;
+	}
+
+	#header {
+		background-attachment: scroll;
+		background-position: top left, center center;
+		background-size: auto,		cover;
+		left: auto;
+		padding: 6em 4em;
+		position: relative;
+		text-align: center;
+		top: auto;
+		width: 100%;
+		display: block;
+	}
+
+	#header h1 br {
+		display: inline;
+	}
 	
+	#main {
+		margin: 0;
+		padding: 6em 4em;
+		width: 100%;
+	}
+
+@media screen and (max-width: 736px) {
+
+
+	h2 {
+		font-size: 1.2em;
+	}
+	h3 {
+		font-size: 1em;
+	}
+	
+	h2.about, article.blog h3{
+		text-align: center;
+	}
+
+	header.major h2 {
+		font-size: 1.35em;
+		text-align: center;
+	}
+
+
+	ul.labeled-icons li {
+		padding-left: 2em;
+	}
+
+		ul.labeled-icons li h3 {
+			line-height: 1.75em;
+		}
+
+
+	#header {
+		padding: 2.25em 1.5em;
+	}
+
+
+	#main {
+		padding: 2.25em 1.5em 0.25em 1.5em;
+	}
+
+		#main > section {
+			margin: 2.25em 0 0 0;
+			padding: 2.25em 0 0 0;
+		}
+
+	}
+	
+	.navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+	font-size: 15px;
+	height: 30px;
+	padding:0;
+	margin: 0;
+
+}
+	.navbar .navbar-collapse {
+	text-align: center;
+	}
+
+@media screen and (max-width: 480px) {
+
+
+/* Header */
+
+	#header {
+		padding: 4.5em 1.5em;
+	}
+
+	#header h1 br {
+		display: none;
+	}
+
